# rng_tui

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  main.py  plotit_textual_plot.py  pyinstaller.md  pyproject.toml  rng_tui.py  style copy.css  style.css  textual-plot-docs.md
app/: config.py  main.py  panels.py
app/static/: style.css
app/tools/installers/: setup_rng_devices_linux_python.sh
lib/: __init__.py
lib/rng_devices/: __init__.py
lib/rng_devices/bitbabbler_rng/: __init__.py  bitbabbler.py  core.py  ftdi.py
lib/rng_devices/intel_seed/: README.md  __init__.py  intel_seed.py  rdseed_bytes.c
lib/rng_devices/pseudo_rng/: README.md  __init__.py  core.py
lib/rng_devices/truerng/: README.md  __init__.py  core.py
lib/services/: __init__.py  filenames.py  storage.py
rng_devices/: __init__.py  test_bit.py  test_true.py
rng_devices/bitbabbler_rng/: README.md  __init__.py  bitbabbler.py  core.py  ftdi.py
rng_devices/truerng/: __init__.py  core.py
tests/: __init__.py  conftest.py  test_api_contract.py  test_bitbabbler.py  test_bitcount_comparison.py  test_intel_seed.py  test_pseudo_rng.py  test_truerng.py
tests/manual/: __init__.py  test_bit_manual.py  test_true_manual.py
