[project]
name = "rng-tui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyserial>=3.5",
    "pyusb>=1.3.1",
    "textual>=7.5.0",
    "pytest>=8.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "bitstring>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"lib/rng_devices/bitbabbler_rng/ftdi.py" = ["N803", "N806"]

[tool.ruff.lint.pydocstyle]
convention = "google"
